texto de nosotros

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muuri-react-pokedex-forked",
+  "name": "muuri-react-bookshop",
   "version": "0.0.0",
   "description": "null",
   "keywords": [],
